contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/oapp/fail/custom_wrong_value.rs
// UI (trybuild) negative test: `custom` must be a bracketed list.

use oapp_macros::oapp;

#[oapp(custom = core)]
pub struct MyOApp;

fn main() {}
